# opengl

./: .gitignore  CMakeLists.txt  glad.c
00_test_env/: CMakeLists.txt  main.cpp
01_hello_window/: CMakeLists.txt  main.cpp
02_hello_triangle/: CMakeLists.txt  main.cpp
03_shaders/: CMakeLists.txt  fragmentShader.glsl  main.cpp  vertexShader.glsl
04_textures/: CMakeLists.txt  fragmentShader.glsl  main.cpp  vertexShader.glsl
05_transformations/: CMakeLists.txt  fragmentShader.glsl  main.cpp  vertexShader.glsl
06_coordinate_systems/: CMakeLists.txt  main.cpp  vertexShader.glsl
common/: common.cpp  common.h
libs/: glad.c
libs/include/glad/: glad.h
shader_helper/: shader_helper.cpp  shader_helper.h
